<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mDialogDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:background="@drawable/background_dialog">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:contentDescription="@string/close_dialog"
                android:src="@drawable/ic_close"/>

            <ImageView
                android:id="@+id/mSharePost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="?attr/colorControlHighlight"/>

        <TextView
            android:id="@+id/mTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:textStyle="bold"
            tools:text="Tittle"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:id="@+id/mImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image"
                tools:src="@drawable/background"
                app:layout_constraintDimensionRatio="H,2.35:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/mCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Category"/>

            <TextView
                android:id="@+id/mCreatedBy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Created by"/>

        </LinearLayout>

        <TextView
            android:id="@+id/mDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:maxLines="5"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">

            <Button
                android:id="@+id/mOpenInApp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/open_in_app"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <Button
                android:id="@+id/mOpenInBrowser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/open_in_browser"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>