<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.presentation.DetailFragment">

    <RelativeLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:contentDescription="@string/navigate_back"
            android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:id="@+id/mTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/mBack"
            android:layout_toStartOf="@id/mSharePost"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:textStyle="bold"
            tools:text="Title"/>

        <ImageView
            android:id="@+id/mSharePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/mOpenInBrowser"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share"/>

        <ImageView
            android:id="@+id/mOpenInBrowser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:contentDescription="@string/open_in_browser"
            android:src="@drawable/ic_browser"/>

    </RelativeLayout>

    <View
        android:id="@+id/Line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@id/TopBar"
        android:background="?attr/colorControlHighlight"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/mSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Line">

        <WebView
            android:id="@+id/mWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/mProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>